modified:   index.html 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+/* input[type='number'] {
+ 
+    
+} */
 html {
     margin-left: 5%;
     margin-right: 5%;
@@ -9,17 +13,6 @@ html {
     
 }
 
-.headline {
-    font-size: 4em;
-    width: fit-content;
-    margin: auto;
-    align-self: center;
-    color: #222;
-}
-.xl2 {
-    width: 36vw;
-    text-align: right;
-}
 .textL {
     width: 36vw;
     border: 1px solid black;
@@ -33,6 +26,20 @@ html {
     padding-bottom: 30px;
     /* border: 1px solid black; */
 }
+
+.headline {
+    font-size: 4em;
+    width: fit-content;
+    margin: auto;
+    align-self: center;
+    color: #222;
+}
+.xl2 {
+    width: 36vw;
+    text-align: right;
+}
+
+
 
 .link {
     border-top: 1px solid black;
@@ -62,23 +69,20 @@ html {
     color: aliceblue; 
   }
 
-  .darkThemeButton {
+  .contrasted {
+    background-color: white;
+    color: rgb(17, 17, 17); 
+  }
+
+  .fa {
+    font-size: 35px;
+  }
+
+  .darkTheme {
     position: absolute;
     top: 33px;
     left: 33px;
   }
-
-
-.contrasted {
-    background-color: white;
-    color: rgb(17, 17, 17); 
-}
-
-.fa {
-    font-size: 35px;
-}
-
-  
 
 .footer {
     position: absolute;
