--- a/style.css
+++ b/style.css
@@ -3,15 +3,21 @@
 @tailwind utilities;*/
 
 /* input[type='number'] { } */
+
+:root {
+    --darkThemeBorder: white;
+    --whiteThemeBorder: black;
+    --currentBorderTheme: var(--whiteThemeBorder);
+}
 html {
-    margin-left: 5%;
-    margin-right: 5%;
+    /* margin-left: 5%;
+    margin-right: 5%; */
     background-color: #EEEEEE;
     font-family: 'Space Mono ', 'Sans';
 }
 ::selection {
-    color:rgb(17, 17, 17);
-    background-color: #889;
+    color:rgb(34,34,34);
+    background-color:aqua;
 }
 h1 h2 h3 h4 h5 h6 {
     font-size: unset;
@@ -19,6 +25,47 @@ h1 h2 h3 h4 h5 h6 {
 }
 .cursorChange:hover {
     cursor: crosshair;   
+}
+
+a {
+    text-decoration: underline;
+    
+}
+
+a:hover {
+    color: aqua;
+}
+.brightTheme {
+    background-color: #eee;
+    color: rgb(34,34,34);
+}
+
+.darkTheme {
+    background-color: rgb(34,34,34);
+    color: #eee;
+}
+
+.darkThemeButtonHighlight {
+    border: 1px solid white;
+}
+
+.darkThemeButtonHighlight:hover {
+    background-color: #eee;
+    color: #222
+}
+.brightThemeButtonHighlight {
+    border: 1px solid black;
+}
+
+.brightThemeButtonHighlight:hover {
+    background-color: #222;
+    color: #eee
+}
+
+.themeSwitchButton {
+    position: absolute;
+    top: 33px;
+    left: 33px;
 }
 
 .textL {
@@ -46,9 +93,8 @@ h1 h2 h3 h4 h5 h6 {
     width: fit-content;
     margin: auto;
     padding-bottom: 30px;
-    padding-top: 30px;
+    padding-top: 69px;
     align-self: center;
-    color: #222;
 }
 .xl2 {
     width: 36vw;
@@ -73,7 +119,6 @@ h1 h2 h3 h4 h5 h6 {
 .item {place-self: center;}
 
 .text {
-    color: #222;
     margin: auto;
     width: fit-content;
     margin-top: 50px;
@@ -81,30 +126,27 @@ h1 h2 h3 h4 h5 h6 {
 }
 
 .button {
-    color: #222;
     margin: auto;
     width: fit-content;
     height: max-content;
+    width: 28vw;
+    text-align: center;
+    margin-top: 5px;
 }
-.darkThemed {
-    background-color: rgb(17, 17, 17);
-    color: aliceblue; 
-  }
+
+
+
 
   .contrasted {
     background-color: white;
-    color: rgb(17, 17, 17); 
+    color: rgb(34,34,34); 
   }
 
   .fa {
     font-size: 35px;
   }
   
-  .darkTheme {
-    position: absolute;
-    top: 33px;
-    left: 33px;
-  }
+  
 
 .footer {
     position: absolute;
@@ -120,9 +162,11 @@ h1 h2 h3 h4 h5 h6 {
     flex-direction: column;
     justify-content: center;
     width: 50%;
-    position: absolute;
+    position: fixed;
     z-index: 1;
-    transform: translateX(33%);
+    top: 45px;
+    transform: translateX(50%);
+    border: 2px solid black;
     
 }
 .ethDataResponseField {
@@ -139,54 +183,56 @@ h1 h2 h3 h4 h5 h6 {
     font-size: 1.1em;
     background-color: #eee;
     height: 40px;
+    border-bottom: 2px solid black;
+    overflow: hidden;
 }
 
 .modalTitle {
     text-align: center;
     font-size: 1.4em;
+    width: 110%;
 }
 
 .closeButton {
     font-size: 1.4em;
     text-align: center;
+    border-left: 2px solid black;
+    background-color: aqua;
+}
+
+.closeButton:hover {
+    background-color: coral;
 }
 
 
-._fetch {
-    border: #eee 1px solid;
+/*.buttonHighlight {
     width: 28vw;
     text-align: center;
-}
+    margin-top: 5px;
+}*/
 
-._fetch:hover {
-    background-color: #EEEEEE;
-    color: #222;
-}
 
 .redFade {
-    animation: redFadeAnimation 1s forwards;
+    animation: bliss 2s forwards;
     /*border: 1px solid rgb(255,0,0); */
     background-color: rgb(255,0,0);
     
 }
 
 .greenFade {
-    animation: greenFadeAnimation 1s forwards;
+    animation: bliss 2s forwards;
     /* border: 1px solid rgb(0,125,125); */
     background-color: rgb(0,125,12);
 }
-@keyframes redFadeAnimation {
-    100% {
-        /* border: 1px solid rgb(0,0,0); */
-        background-color: rgb(0,0,0,0);
-    }
-}
 
-@keyFrames greenFadeAnimation {
-    
+.whiteFade {
+    animation: bliss 2s forwards;
+    background-color: rgb(100,100,100);
+}
+@keyframes bliss {
     100% {
-        background-color: rgb(0,0,0,0);
         /* border: 1px solid rgb(0,0,0); */
+        background-color: rgb(0,0,0,0);
     }
 }
 
@@ -207,3 +253,39 @@ h1 h2 h3 h4 h5 h6 {
     border-bottom: 1px solid black;
 }
 
+
+.FlowContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.winnerButtonContainer {
+    width: fit-content;
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+}
+
+.winnerButton {
+    width: 150px;
+    text-align: center;
+    margin: unset;
+}
+
+.winnerButtonMeta {
+    text-align: center;
+    border-left: 2px solid black;
+    padding-left: 5px;
+}
+
+.winnerButton:hover {
+    background-color: #eee;
+    color:rgb(34,34,34);
+}
+
+.tableLeftAligned {
+    text-align: right;
+    padding-right: 100px;
+}
