--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@ h1 h2 h3 h4 h5 h6 {
 
 a {
     text-decoration: underline;
-    
 }
 
 a:hover {
@@ -149,12 +148,11 @@ a:hover {
   
 
 .footer {
-    position: absolute;
-    bottom: 0px;
+    margin-top: 100px;
     width: 90vw;
     display: flex;
     justify-content: center;
-    border-top: 2px solid black;
+    border-top: 1px solid black;
 }
 
 .modal {
