Added code comments, variable names now clearer  Changes to be committed: 	modified:   logic.js 	modified:   style.css

--- a/style.css
+++ b/style.css
@@ -234,8 +234,14 @@ a:hover {
     }
 }
 
+
 .priceTable {
     width: 100%;
+}
+
+.priceDataWrapper {
+    
+    
 }
 .dataEntry {
     background-color: rgb(0,0,0,0);
